<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/history"
        android:textColor="@color/red"
        android:gravity="center_vertical|start"
        android:textSize="25sp"
        android:padding="3dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/navy_blue"
        android:textSize="35sp"
        android:padding="3dp"
        android:gravity="center_vertical|end"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_history"/>

    <Button
        android:id="@+id/btMemoryAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="memoryAddToButtonClicked"
        android:gravity="center"
        android:text="@string/memory_add"
        android:layout_margin="2dp"
        android:backgroundTint="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btClear"
        app:layout_constraintEnd_toStartOf="@id/btMemorySubtract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result" />

    <Button
        android:id="@+id/btMemorySubtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="memorySubtractFromButtonClicked"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:layout_margin="2dp"
        android:text="@string/memory_subtract"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintStart_toEndOf="@id/btMemoryAdd"
        app:layout_constraintEnd_toStartOf="@id/btMemoryRecall"
        app:layout_constraintBottom_toTopOf="@id/btExponent"/>

    <Button
        android:id="@+id/btMemoryRecall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="memoryRecallButtonClicked"
        android:backgroundTint="@color/purple_500"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/memory_register"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintStart_toEndOf="@id/btMemorySubtract"
        app:layout_constraintEnd_toStartOf="@id/btMemoryClear"
        app:layout_constraintBottom_toTopOf="@id/btPi"/>

    <Button
        android:id="@+id/btMemoryClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="memoryClearButtonClicked"
        android:backgroundTint="@color/purple_500"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/memory_clear"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintStart_toEndOf="@id/btMemoryRecall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btDivide"/>

    <Button
        android:id="@+id/btClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="clearButtonClicked"
        android:text="@string/clear"
        android:layout_margin="2dp"
        android:textSize="24sp"
        android:gravity="center"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/btMemoryAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btExponent"
        app:layout_constraintBottom_toTopOf="@id/btSeven"/>

    <Button
        android:id="@+id/btExponent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:onClick="exponentButtonClicked"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:text="@string/exponent"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btMemorySubtract"
        app:layout_constraintStart_toEndOf="@id/btClear"
        app:layout_constraintEnd_toStartOf="@id/btPi"
        app:layout_constraintBottom_toTopOf="@id/btEight"/>

    <Button
        android:id="@+id/btPi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="pieButtonClicked"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:text="@string/pi"
        android:layout_margin="2dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btMemoryRecall"
        app:layout_constraintStart_toEndOf="@id/btExponent"
        app:layout_constraintEnd_toStartOf="@id/btDivide"
        app:layout_constraintBottom_toTopOf="@id/btNine"/>

    <Button
        android:id="@+id/btDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="divisionButtonClicked"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:layout_margin="2dp"
        android:text="@string/divide"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btMemoryClear"
        app:layout_constraintStart_toEndOf="@id/btPi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btMultiply"/>

    <Button
        android:id="@+id/btSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:text="@string/digit_seven"
        android:layout_margin="2dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/btClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btEight"
        app:layout_constraintBottom_toTopOf="@id/btFour"/>

    <Button
        android:id="@+id/btEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:backgroundTint="@color/light_grey"
        android:gravity="center"
        android:text="@string/digit_eight"
        android:layout_margin="2dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btExponent"
        app:layout_constraintStart_toEndOf="@id/btSeven"
        app:layout_constraintEnd_toStartOf="@id/btNine"
        app:layout_constraintBottom_toTopOf="@id/btFive"/>

    <Button
        android:id="@+id/btNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:backgroundTint="@color/light_grey"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/digit_nine"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btPi"
        app:layout_constraintStart_toEndOf="@id/btEight"
        app:layout_constraintEnd_toStartOf="@id/btMultiply"
        app:layout_constraintBottom_toTopOf="@id/btSix"/>

    <Button
        android:id="@+id/btMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="multiplicationButtonClicked"
        android:backgroundTint="@color/dark_orange"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/multiply"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btDivide"
        app:layout_constraintStart_toEndOf="@id/btNine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btSubtraction"/>

    <Button
        android:id="@+id/btFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:text="@string/digit_four"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="2dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/btSeven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btFive"
        app:layout_constraintBottom_toTopOf="@id/btOne"/>

    <Button
        android:id="@+id/btFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:backgroundTint="@color/light_grey"
        android:gravity="center"
        android:layout_margin="2dp"
        android:text="@string/digit_five"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btEight"
        app:layout_constraintStart_toEndOf="@id/btFour"
        app:layout_constraintEnd_toStartOf="@id/btSix"
        app:layout_constraintBottom_toTopOf="@id/btTwo"/>

    <Button
        android:id="@+id/btSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:backgroundTint="@color/light_grey"
        android:gravity="center"
        android:layout_margin="2dp"
        android:text="@string/digit_six"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btNine"
        app:layout_constraintStart_toEndOf="@id/btFive"
        app:layout_constraintEnd_toStartOf="@id/btSubtraction"
        app:layout_constraintBottom_toTopOf="@id/btThree"/>

    <Button
        android:id="@+id/btSubtraction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="subtractionButtonClicked"
        android:backgroundTint="@color/dark_orange"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/subtraction"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btMultiply"
        app:layout_constraintStart_toEndOf="@id/btSix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btAddition"/>

    <Button
        android:id="@+id/btOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:text="@string/digit_one"
        android:textSize="24sp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btTwo"
        app:layout_constraintBottom_toTopOf="@id/btZero"/>

    <Button
        android:id="@+id/btTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:layout_margin="2dp"
        android:backgroundTint="@color/light_grey"
        android:gravity="center"
        android:text="@string/digit_two"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btFive"
        app:layout_constraintStart_toEndOf="@id/btOne"
        app:layout_constraintEnd_toStartOf="@id/btThree"
        app:layout_constraintBottom_toTopOf="@id/btZero"/>

    <Button
        android:id="@+id/btThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:onClick="numberButtonClicked"
        android:backgroundTint="@color/light_grey"
        android:gravity="center"
        android:text="@string/digit_three"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btSix"
        app:layout_constraintStart_toEndOf="@id/btTwo"
        app:layout_constraintEnd_toStartOf="@id/btAddition"
        app:layout_constraintBottom_toTopOf="@id/btPoint"/>

    <Button
        android:id="@+id/btAddition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="additionButtonClicked"
        android:backgroundTint="@color/dark_orange"
        android:gravity="center"
        android:text="@string/addition"
        android:layout_margin="2dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btSubtraction"
        app:layout_constraintStart_toEndOf="@id/btThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btEqual"/>

    <Button
        android:id="@+id/btZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numberButtonClicked"
        android:text="@string/digit_zero"
        android:layout_margin="2dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/btOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btPercent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btPercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="percentageButtonClicked"
        android:text="@string/percentage"
        android:layout_margin="2dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/btTwo"
        app:layout_constraintStart_toEndOf="@id/btZero"
        app:layout_constraintEnd_toStartOf="@id/btPoint"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btPoint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="pointButtonClicked"
        android:backgroundTint="@color/light_grey"
        android:gravity="center"
        android:text="@string/point"
        android:layout_margin="2dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btThree"
        app:layout_constraintStart_toEndOf="@id/btPercent"
        app:layout_constraintEnd_toStartOf="@id/btEqual"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="equalsToButtonClicked"
        android:backgroundTint="@color/dark_orange"
        android:gravity="center"
        android:text="@string/equalsTo"
        android:layout_margin="2dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btAddition"
        app:layout_constraintStart_toEndOf="@id/btPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>